@@ -518,31 +518,23 @@ class SexpVector(Sexp, metaclass=abc.ABCMeta):
                             'rpy2.rinterface._rinterface.SexpCapsule')
 
     @classmethod
-    def _populate_r_vector(cls, iterable,
-                           r_vector):
-        return _populate_r_vector(iterable,
-                                  r_vector,
-                                  cls._R_SET_VECTOR_ELT,
-                                  cls._CAST_IN)
-
-    @classmethod
     @_cdata_res_to_rinterface
     def from_iterable(cls, iterable,
                       populate_func=None) -> VT:
         """Create an R vector/array from an iterable."""
         if not embedded.isready():
             raise embedded.RNotReadyError('Embedded R is not ready to use.')
+        if populate_func is None:
+            populate_func = _populate_r_vector
         n = len(iterable)
         with memorymanagement.rmemory() as rmemory:
             r_vector = rmemory.protect(
                 openrlib.rlib.Rf_allocVector(
                     cls._R_TYPE, n)
             )
-            if populate_func is None:
-                cls._populate_r_vector(iterable,
-                                       r_vector)
-            else:
-                populate_func(iterable, r_vector)
+            populate_func(iterable, r_vector,
+                          cls._R_SET_VECTOR_ELT,
+                          cls._CAST_IN)
         return r_vector
 
     @classmethod
